Update swagger.json and ActivitiesController to have correct URIs ready for accessing
